tests/snapshots/snapshots__a_narrow_terminal_at_sixty_columns.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 60, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty
╭ sort activity · lens all ────────────────────────────────╮
│   BRANCH                              ↑   ↓   ±     AGE  │
│ ▾ fixture (6)                         1       2      2h  │
│ │ ◆ main                                             2h  │
│ │ ● feat/ahead                        1              1d  │
│ │ ● chore/clean                                      9d  │
│ │ ● (3head000)                                      40d  │
│ │ ● feat/dirty                                2     90d  │
│ │ ✗ docs/gone                                    !   1y  │
│ │ ● fix/locked                                   L   1y  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
 list   tab  the detail of this row   j/k move  d remove  ?
