tests/snapshots/snapshots__a_worktree_detail_with_changes.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ feat/dirty  ancient · last touched 90d                             │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/dirty                                                     │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead              1              1d  ││ ┃ 2 uncommitted files                                              │
│ │ ● chore/clean                            9d  ││                                                                    │
│ │ ● (3head000)                            40d  ││ branch    feat/dirty  no upstream · 0 commits off main             │
│ │ ● feat/dirty                      2     90d  ││ head      4c000000  init: the first commit                         │
│ │ ✗ docs/gone                          !   1y  ││           Fixture · 90d ago                                        │
│ │ ● fix/locked                         L   1y  ││ repo      fixture  /fixture/repo                                   │
│                                                ││                                                                    │
│                                                ││ Working tree (0 staged · 1 unstaged · 1 untracked)                 │
│                                                ││   .M README.md                                                     │
│                                                ││   ?? scratch.txt                                                   │
│                                                ││                                                                    │
│                                                ││ Recent commits                                                     │
│                                                ││   4r000000  90d  init: the first commit                            │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
