tests/snapshots/snapshots__a_worktree_detail_with_unpushed_commits.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ feat/ahead  active · last touched 1d                               │
│ ▾ fixture (7)               1       2      2h  ││ /fixture/ahead                                                     │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead              1              1d  ││ ┃ 1 off-base commit                                                │
│ │ ● chore/clean                            9d  ││                                                                    │
│ │ ● (3head000)                            40d  ││ branch    feat/ahead  no upstream · 1 commits off main             │
│ │ ● feat/dirty                      2     90d  ││ head      1c000000  feat: a commit that exists only here           │
│ │ ✗ docs/gone                          !   1y  ││           Fixture · 1d ago                                         │
│ │ ● fix/locked                         L   1y  ││ repo      fixture  /fixture/repo                                   │
│                                                ││                                                                    │
│                                                ││ Off-base commits (1)                                               │
│                                                ││   1u000000   1d  feat: a commit that exists only here              │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  a/A sweep  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
