tests/snapshots/snapshots__removing_a_marking_lists_every_worktree_worst_first.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 24)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 4 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                ↑    ↓    ±       AGE  ││ main  active · last touched 2h  main checkout                      │
│ ▾ fixture (6)           1         2        2h  ││ /fixture/repo                                                      │
│ │ ◆ main                                   2h  ││                                                                    │
│▌│ ● feat/ahead        ╭ Remove marked worktrees? ────────────────────────────────────────────╮                       │
│▌│ ● chore/clean       │ feat/dirty                          2 uncommitted files              │                       │
│ │ ● (3head000)        │ feat/ahead                          1 off-base commit                │main                   │
│▌│ ● feat/dirty        │ chore/clean                         Nothing to salvage — safe to     │                       │
│ │ ✗ docs/gone         │ remove                                                               │                       │
│ │ ● fix/locked        │                                                                      │                       │
│                       │ 3 worktrees across 1 repository                                      │                       │
│                       │ 1 holds uncommitted work — 2 files destroyed, and git will only      │                       │
│                       │ remove them with --force                                             │                       │
│                       │ 1 commit exists nowhere else; the branches survive                   │                       │
│                       │                                                                      │                       │
│                       │  y  do it     n  cancel                                              │                       │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 3 marked  2 uncommitted files · 1 commit only there   esc clears · d still removes the row under the cursor
